1. Collection API Улучшения[#215420]