@@ -11,10 +11,10 @@ public class FullSearchTest {
 
     @Test
     public void extractNumber() {
-        List<Task> tasks = Arrays.asList(
-                new Task("1", "First desk"),
+        List<Task> tasks = new ArrayList<>(
+                List.of(new Task("1", "First desk"),
                 new Task("2", "Second desk"),
-                new Task("1", "First desk")
+                new Task("1", "First desk"))
         );
         Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
         assertThat(FullSearch.extractNumber(tasks), is(expected));
